--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-data-grid": "^7.6.1",
     "aos": "^2.3.4",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
