--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "pretty-checkbox-react": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
